Bug 136575 - Skia: Assert failing opening attachment 42154 [details]
Summary: Skia: Assert failing opening attachment 42154
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: haveBacktrace
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-09-08 14:50 UTC by Mike Kaganski
Modified: 2020-09-09 15:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (21.98 KB, text/plain)
2020-09-08 15:44 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2020-09-08 14:50:19 UTC
Opening attachment 42154 [details] with Skia, there is an assertion failing:

---------------------------
Microsoft Visual C++ Runtime Library
---------------------------
Debug Error!

Program: C:\lo\src\build\instdir\program\soffice.bin

abort() has been called

(Press Retry to debug the application)

---------------------------
Abort   Retry   Ignore   
---------------------------

Tested with Version: 7.1.0.0.alpha0+ (x64)
Build ID: aeda22ce8f81c9b79a2d15deb6dcf4ffdf2dcf37
CPU threads: 12; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: en-US (ru_RU); UI: en-US
Calc: CL
Comment 1 Julien Nabet 2020-09-08 15:44:09 UTC
Created attachment 165281 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today + SAL_USE_VCLPLUGIN=gen + SAL_ENABLESKIA=1 + enable-dbgutil, I could reproduce this.
Comment 2 Commit Notification 2020-09-09 09:04:00 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8821bd663ed75fb2c9706b102e1d6f8ccfcf00f5

allow xor mode with Skia drawTransformedBitmap() (tdf#136575)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Julien Nabet 2020-09-09 11:13:21 UTC
On pc Debian x86-64 with master sources updated today I don't reproduce this anymore.
Thank you Luboš! :-)
Comment 4 Commit Notification 2020-09-09 15:20:21 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/d54da282837d56027260bbdbca4c9f0d23d159bb

allow xor mode with Skia drawTransformedBitmap() (tdf#136575)

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.