allow xor mode with Skia drawTransformedBitmap() (tdf#136575)

I thought this wouldn't make sense, but the document uses invert and
then VclProcessor2D::RenderBitmapPrimitive2D(), which simply uses
DrawTransformedBitmap() with its transformation data (which is
a no-op I'd guess). Still, don't bother with the possibly complicated
finding out the bounds, just invalidate the whole area.

Change-Id: I309953338f11d1c1c90c684bf0314e60bc44a249
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102267
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>